# solat_cb

./: .gitignore  README.md  environment.yml  pyproject.toml  setup.py
conda/: environment_with_build.yml  environment_without_build.yml
docs/: conf.py  index.rst  requirements.txt
jobs/: mle.sh  run.py
lat_cb/: bp_profile.pkl  cb.ini  cmbEB.py  mle.py  mpi.py  quad.py  signal.py  spectra.pkl  spectra.py
notebooks/: anisotropic_EBfgCarlos.ipynb  anisotropic_simple.ipynb  calibration.ipynb  quadratic.ipynb  s2n.ipynb  signal.ipynb  simulations.ipynb  so_noise.ipynb  spectra.ipynb  spectra_mle.ipynb  spectra_mle_grid.ipynb  spectra_mle_single.ipynb
solat_cb/: __init__.py  calibration.py  data.py  mle.py  quad.py  spectra.py  utils.py
solat_cb/mle/: __init__.py  ls.py  snr.py  solve.py  stat.py  utils.py
solat_cb/simulation/: __init__.py  cmb.py  fg.py  mask.py  noise.py  sky.py
